--- a/Project_1.ipynb
+++ b/Project_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYqdEyVXf39o2lh+bW1vYl",
+      "authorship_tag": "ABX9TyPeK6MH+0G3CtClfAOAxLuv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,20 +37,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "iF81k5kU1_d9",
-        "outputId": "45a255e3-11ab-4b91-eec4-1d2b9a125994"
+        "outputId": "0cb8581c-05bf-4101-8c50-e3c8bf2944b6"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ],
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "G7WRxeEN3F7N"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
       "metadata": {
         "id": "3ODsS_sZ3HzV"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "8rmrwMLZsydw"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -99,12 +99,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 357
+          "height": 206
         },
         "id": "qVCw3rzj33Ps",
-        "outputId": "8a01ea3c-81f6-4e04-ff25-b977300ff35a"
+        "outputId": "ab0f7abe-ee5d-45b6-d24b-d3e40d25814c"
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -140,7 +140,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-f432d5ce-e9a1-4a78-8303-935f6a040df8\">\n",
+              "  <div id=\"df-7641ddaa-36b7-40f6-a3bf-7a36a6bdbf76\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -253,7 +253,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f432d5ce-e9a1-4a78-8303-935f6a040df8')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7641ddaa-36b7-40f6-a3bf-7a36a6bdbf76')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -304,12 +304,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-f432d5ce-e9a1-4a78-8303-935f6a040df8 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7641ddaa-36b7-40f6-a3bf-7a36a6bdbf76 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-f432d5ce-e9a1-4a78-8303-935f6a040df8');\n",
+              "          const element = document.querySelector('#df-7641ddaa-36b7-40f6-a3bf-7a36a6bdbf76');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -332,7 +332,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -346,9 +346,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "75Jfdp4V4BWj",
-        "outputId": "bf804fee-13ee-452f-b876-a901ccc0f211"
+        "outputId": "33144d06-ef46-4f76-83d1-932122124fd4"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,9 +397,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4n43RPvy4RfC",
-        "outputId": "47665c78-c1f9-4dbe-95e4-51f482089e32"
+        "outputId": "fee76636-e51b-417b-d902-b6b39c6d370a"
       },
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +409,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 7
         }
       ]
     },
@@ -421,7 +421,7 @@
       "metadata": {
         "id": "qSOp0yJs4fmm"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -435,9 +435,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3LQjh9AL48MA",
-        "outputId": "5e206f69-4bbf-48e7-d1c0-dbfc8cd0511d"
+        "outputId": "d4fd5abf-c203-42f2-97e7-4c100cda7510"
       },
-      "execution_count": 11,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -447,7 +447,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
         }
       ]
     },
@@ -461,9 +461,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pu1PVLHE6JSQ",
-        "outputId": "489d2982-16d8-4a86-fe1d-ff7131868829"
+        "outputId": "a139535d-d18f-42ab-ffb7-15416eb70583"
       },
-      "execution_count": 12,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +485,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 10
         }
       ]
     },
@@ -499,9 +499,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0R0L36Ju6YaO",
-        "outputId": "e8a61bc7-071e-4056-d202-d44accb8f635"
+        "outputId": "f91d67d0-8a25-4e80-d99e-31de3b478de3"
       },
-      "execution_count": 13,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -522,7 +522,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 11
         }
       ]
     },
@@ -537,9 +537,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WhB8OcEV9HnR",
-        "outputId": "aef4f778-d2a8-412c-d3da-c3aedc41b72d"
+        "outputId": "17fc7231-5b67-4664-f892-bbeabcf57bb8"
       },
-      "execution_count": 14,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 12
         }
       ]
     },
@@ -564,9 +564,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tp-_Yr-x6kTZ",
-        "outputId": "c68e4482-8166-4bd2-a051-8e6c1c3a2904"
+        "outputId": "b354d99a-d751-4f26-a633-5e5a553fc6b9"
       },
-      "execution_count": 15,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -579,7 +579,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 13
         }
       ]
     },
@@ -591,7 +591,7 @@
       "metadata": {
         "id": "AiRuLteQENe-"
       },
-      "execution_count": 16,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -604,9 +604,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uf-mKtcbEqKQ",
-        "outputId": "43ad2f2a-256f-4b70-84b7-e222fea97026"
+        "outputId": "8a6559c0-f4a0-4706-e029-fa5c738f717b"
       },
-      "execution_count": 17,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,9 +644,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4yQWYBjYEyQF",
-        "outputId": "90c4246c-4791-4b52-cac5-92d256ad5281"
+        "outputId": "249b403d-b46a-43d6-b92f-dc6e31febd61"
       },
-      "execution_count": 18,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -667,7 +667,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 16
         }
       ]
     },
@@ -682,9 +682,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mNq4dqYXEz_r",
-        "outputId": "80ac73fd-876f-4c0b-d7cf-f8e4bd325f38"
+        "outputId": "330b981b-7131-4349-afba-3c18d1744947"
       },
-      "execution_count": 19,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -705,7 +705,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 17
         }
       ]
     },
@@ -731,9 +731,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ZgU1QX_GF-E",
-        "outputId": "e480345a-88cd-42aa-80cc-e3d0a808a870"
+        "outputId": "4fcc7d71-8f10-448f-ac24-5c09d5ae8768"
       },
-      "execution_count": 20,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -754,7 +754,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 18
         }
       ]
     },
@@ -766,12 +766,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 364
+          "height": 300
         },
         "id": "MLTBVBxTsz4H",
-        "outputId": "03752d2c-46bd-4352-fc68-717bf6046a2d"
+        "outputId": "f9016107-5c77-4000-8847-8c312dc9f015"
       },
-      "execution_count": 21,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -799,7 +799,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-646289e6-6da1-4f6d-9a84-92a5f27a5dbb\">\n",
+              "  <div id=\"df-1e394e30-0630-4943-9cee-a7acf07cc1bf\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -894,7 +894,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-646289e6-6da1-4f6d-9a84-92a5f27a5dbb')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1e394e30-0630-4943-9cee-a7acf07cc1bf')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -945,12 +945,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-646289e6-6da1-4f6d-9a84-92a5f27a5dbb button.colab-df-convert');\n",
+              "          document.querySelector('#df-1e394e30-0630-4943-9cee-a7acf07cc1bf button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-646289e6-6da1-4f6d-9a84-92a5f27a5dbb');\n",
+              "          const element = document.querySelector('#df-1e394e30-0630-4943-9cee-a7acf07cc1bf');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -973,7 +973,146 @@
             ]
           },
           "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "41gIHzpSmdYF",
+        "outputId": "f8c82158-2dfe-4673-ea81-468147b571d8"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 8523 entries, 0 to 8522\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column                     Non-Null Count  Dtype  \n",
+            "---  ------                     --------------  -----  \n",
+            " 0   Item_Identifier            8523 non-null   object \n",
+            " 1   Item_Weight                8523 non-null   float64\n",
+            " 2   Item_Fat_Content           8523 non-null   object \n",
+            " 3   Item_Visibility            8523 non-null   float64\n",
+            " 4   Item_Type                  8523 non-null   object \n",
+            " 5   Item_MRP                   8523 non-null   float64\n",
+            " 6   Outlet_Identifier          8523 non-null   object \n",
+            " 7   Outlet_Establishment_Year  8523 non-null   int64  \n",
+            " 8   Outlet_Location_Type       8523 non-null   object \n",
+            " 9   Outlet_Type                8523 non-null   object \n",
+            " 10  Item_Outlet_Sales          8523 non-null   float64\n",
+            "dtypes: float64(4), int64(1), object(6)\n",
+            "memory usage: 799.0+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Item_Identifier'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TCT01zVApV80",
+        "outputId": "2b57c6e8-8def-4b97-926e-0644c6c934d6"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "FDW13    10\n",
+              "FDG33    10\n",
+              "NCY18     9\n",
+              "FDD38     9\n",
+              "DRE49     9\n",
+              "         ..\n",
+              "FDY43     1\n",
+              "FDQ60     1\n",
+              "FDO33     1\n",
+              "DRF48     1\n",
+              "FDC23     1\n",
+              "Name: Item_Identifier, Length: 1559, dtype: int64"
+            ]
+          },
+          "metadata": {},
           "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Item_Fat_Content'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZEcKrhafpelC",
+        "outputId": "a2045ad8-e11b-4ffa-e4bd-e49db30e4139"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Low Fat    5089\n",
+              "Regular    2889\n",
+              "LF          316\n",
+              "reg         117\n",
+              "low fat     112\n",
+              "Name: Item_Fat_Content, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df['Item_Fat_Content'] = df['Item_Fat_Content'].replace('low fat', 'Low Fat')\n",
+        "df['Item_Fat_Content'] = df['Item_Fat_Content'].replace('LF', 'Low Fat')\n",
+        "df['Item_Fat_Content'] = df['Item_Fat_Content'].replace('reg', 'Regular')\n",
+        "df['Item_Fat_Content'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SWo4Vt-ipi4U",
+        "outputId": "2f035ced-642e-4a44-ca6b-d87ac7365cfd"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Low Fat    5517\n",
+              "Regular    3006\n",
+              "Name: Item_Fat_Content, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
         }
       ]
     }
